syntax = "proto2";

package models;

import "github.com/gogo/protobuf/gogoproto/gogo.proto";
import "modification_tag.proto";
import "actions.proto";
import "security_group.proto";
import "environment_variables.proto";

message DesiredLRP {
  optional string process_guid = 1;
  optional string domain = 2;
  optional string root_fs = 3 [(gogoproto.jsontag) = "rootfs"];
  optional int32 instances = 4;
  repeated EnvironmentVariable environment_variables = 5 [(gogoproto.jsontag) = "env"];
  optional Action setup = 6;
  optional Action action = 7;
  optional uint32 start_timeout = 8;
  optional Action monitor = 9;
  optional int32 disk_mb = 10;
  optional int32 memory_mb = 11;
  optional uint32 cpu_weight = 12;
  optional bool privileged = 13;
  repeated uint32 ports = 14;
  optional bytes routes = 15 [(gogoproto.nullable) = true, (gogoproto.customtype) = "Routes"];
  optional string log_source = 16;
  optional string log_guid = 17;
  optional string metrics_guid = 18;
  optional string annotation = 19;
  repeated SecurityGroupRule egress_rules = 20;
  optional ModificationTag modification_tag = 21;
}

// helper message for marshalling routes
message proto_routes {
  map<string, bytes> routes = 1;
}

message DesiredLRPUpdate {
  optional int32 instances = 1 [(gogoproto.nullable) = true];
  optional bytes routes = 2 [(gogoproto.nullable) = true, (gogoproto.customtype) = "Routes"];
  optional string annotation = 3 [(gogoproto.nullable) = true];
}
